Revert "MET-7061 some Sonar issues solved"
This reverts commit 3bfed8ece85a2c1cd72de0c904fcb036d8d249f4.